tests/NormalTests/paczka1/small_fuzzy/62556713.err
Error in line 7: snHDujAJLjY A350 36,0
Error in line 10: hLiJG6hU91 S484 27,0
Error in line 6: S484 A698 16,3
